<resources>
    <string name="signInButton">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="use_facebook">Use Facebook</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="use_google">Use Google</string>
    <string name="loginButton">Login</string>
    <string name="app_name">Clean Wagon</string>
    <string name="settings">Settings</string>
    <string name="manual_drive">Manual drive</string>
    <string name="map">Map</string>
    <string name="logout">Log out</string>
    <string name="mymowers">My mowers</string>
    <string name="offline">Offline</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="done">Done</string>
</resources>