<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="681dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/usernameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_margin="15dp"/>

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="325dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:background="@drawable/text_view_border"
            android:layout_gravity="center_horizontal"

            />

        <TextView
            android:id="@+id/passwordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_margin="15dp"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="325dp"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="textPassword"
            android:background="@drawable/text_view_border"
            android:layout_gravity="center_horizontal"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@drawable/gradient_blue"
            android:text="@string/signInButton"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView2"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Or"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/createAccountButton"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:background="@drawable/text_view_border"
            android:text="@string/create_a_new_account"
            android:textAllCaps="false"
            android:textColor="@color/lightBlue" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:radius="25dp"
            android:paddingLeft="20dp"
            android:paddingRight="30dp"
            android:background="@drawable/text_view_border"
            android:drawableLeft="@drawable/facebook_logo"
            android:text="@string/use_facebook"
            android:textAllCaps="false"
            android:textColor="@color/lightBlue"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/useGoogleButton"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:paddingLeft="20dp"
            android:paddingRight="30dp"
            android:background="@drawable/text_view_border"
            android:text="@string/use_google"
            android:textAllCaps="false"
            android:textColor="@color/lightBlue"
            android:drawableLeft="@drawable/google_logo"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>